--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="/image.jpg" height="200" alt="My Profile Photo"></td>
+            <td><img src="image.jpg" height="200" alt="My Profile Photo"></td>
             <td><h1>Aman Kumar</h1>
                 <p> <em>Student at <strong><a href="https://www.cuchd.in/" target="_blank">Chandigarh University </a> </strong>
                     </em> </p>
@@ -61,9 +61,9 @@
             <td>★★☆☆☆</td>
         </tr>
     </table>
-    <h4><a href="/Contact.html" target="_blank">CONTACT ME</a></h4>
+    <h4><a href="Contact.html" target="_blank">CONTACT ME</a></h4>
     <br>
-    <a href="/Challenge1.html" target="_blank">Challenge 1</a>
+    <a href="Challenge1.html" target="_blank">Challenge 1</a>
 
 
 
